# pr2_send_me_a_flower

./: .gitignore  CMakeLists.txt  package.xml
config/: filtered.rviz  interactive.rviz  pr2_interactive.rviz  pr2_moveit.rviz
launch/: demo.launch  gazebo_flower_shop.launch  parameter_switcher.launch  sample_recog_simple.launch  slic_super_pixels.launch  tabletop_object_detector.launch  test.launch  vase_detection.launch  white_vase_detection.launch  yellow_flower_detection.launch
particle_filter/: CMakeLists.txt  change_detector.cpp  change_detector2.cpp  cv  endeffector_pub.l  exe  image_dif.cpp  image_dif.hpp  image_dif.py  main.cpp  tester.cpp
script/: average_queue.py  choose_highest_box.py  choose_one_box.py  collision-adder.l  collision-adder.lsp  grasp-invisible-vase.l  ishida-pr2-init.l  pickup_highest_box.py  plane2box.py  select-reach.l  select-reach.lsp  table_detector.py  util-eus.l  util-motion.l  util-ros.l  util.l  vase_reach_point.py
script/util/: util-motion.l  util-ros.l
src/: plane2box.cpp
srv/: BoxArray.srv  ReachPoint.srv
urdf/: vase.urdf
vase_estimater/: cvtest.py  line_segment.py  sample_image.py  test.launch  test_pcd.launch
vase_estimater/config/: pcd_config.rviz
vase_estimater/pcd/: data_1558507730186226.pcd  saver.launch
worlds/: tabletop.world
